--- a/HDT7SVM.ipynb
+++ b/HDT7SVM.ipynb
@@ -3666,7 +3666,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Modelo 3\n"
+        "### Modelo 3\n",
+        "Kernel Polinomial\n"
       ]
     },
     {
