--- a/HDT7SVM.ipynb
+++ b/HDT7SVM.ipynb
@@ -4723,34 +4723,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 562,
+      "execution_count": 585,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0.8538812785388128\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pickle\n",
-        "\n",
-        "global clfTree\n",
-        "clfTree = 0\n",
         "\n",
         "# Cargar el diccionario desde el archivo\n",
         "with open('RMSE_dictModels.pkl', 'rb') as f:\n",
         "    RMSE_dictModels = pickle.load(f)\n",
         "\n",
         "with open('classification_METRICS.pkl', 'rb') as f:\n",
-        "    classification_METRICS = pickle.load(f)\n",
-        "\n",
-        "# Luego puedes acceder a las funciones y variables\n",
-        "# Por ejemplo:\n",
-        "random_forest = classification_METRICS['Random Forest_Profundidades']\n",
-        "print(random_forest['accuracy'])\n"
+        "    classification_METRICS = pickle.load(f)\n"
       ]
     },
     {
