Update to show last metrics for regresion models to compare

--- a/HDT7SVM.ipynb
+++ b/HDT7SVM.ipynb
@@ -4923,6 +4923,7 @@
       ],
       "source": [
         "\n",
+        "print(\"-------------------- SVM regresion Model ------------------------------------\")\n",
         "print(\"Root Mean squared error: %.2f\" % root_mean_squared_error(target_test, target_pred))\n",
         "print(\"Mean squared error: %.2f\" % mean_squared_error(target_test, target_pred))\n",
         "print('R^2 score: %.2f' % r2_score(target_test, target_pred))\n",
@@ -4931,6 +4932,146 @@
         "    'RMSE': root_mean_squared_error(target_test, target_pred),\n",
         "    'MSE': mean_squared_error(target_test, target_pred)\n",
         "}\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Comparacion de resultados"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 214,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-------------------- Linear Regression ------------------------------------\n",
+            "RMSE : 47498.307068669885\n",
+            "MSE : 2256089174.3896556\n",
+            "r2 : 0.590331467969198\n",
+            "\n",
+            "\n",
+            "-------------------- Linear Regression Multivariable ------------------------------------\n",
+            "RMSE : 41532.21065951917\n",
+            "r2 : 0.7039023156506323\n",
+            "MSE : 1724924522.2666779\n",
+            "\n",
+            "\n",
+            "-------------------- Linear Regression Multivariable learning_curve ------------------------------------\n",
+            "explained_variance : 0.7041\n",
+            "mean_squared_log_error : 0.0399\n",
+            "r2 : 0.7039\n",
+            "MAE : 20614.831\n",
+            "MSE : 1724924522.2667\n",
+            "RMSE : 41532.2107\n",
+            "AIC : 21863.0866\n",
+            "BIC : 22227.7984\n",
+            "\n",
+            "\n",
+            "-------------------- Linear Regression Multivariable predictores ------------------------------------\n",
+            "explained_variance : 0.7172\n",
+            "mean_squared_log_error : 0.0325\n",
+            "r2 : 0.7168\n",
+            "MAE : 19965.2345\n",
+            "MSE : 1649538373.9883\n",
+            "RMSE : 40614.5094\n",
+            "AIC : 21743.4603\n",
+            "BIC : 21925.8162\n",
+            "\n",
+            "\n",
+            "-------------------- Ridge Regression ------------------------------------\n",
+            "explained_variance : 0.6925\n",
+            "mean_squared_log_error : 0.0392\n",
+            "r2 : 0.6923\n",
+            "MAE : 20602.3215\n",
+            "MSE : 1792480758.2423\n",
+            "RMSE : 42337.699\n",
+            "AIC : 21902.3106\n",
+            "BIC : 22267.0224\n",
+            "\n",
+            "\n",
+            "-------------------- Lasso Regression ------------------------------------\n",
+            "explained_variance : 0.7041\n",
+            "mean_squared_log_error : 0.0399\n",
+            "r2 : 0.7039\n",
+            "MAE : 20616.514\n",
+            "MSE : 1725008326.4463\n",
+            "RMSE : 41533.2196\n",
+            "AIC : 21863.1362\n",
+            "BIC : 22227.848\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision0 ------------------------------------\n",
+            "RMSE : 0.3792566630111542\n",
+            "MSE : 0.14383561643835616\n",
+            "r2 : 0.4211696593388152\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Random Forest ------------------------------------\n",
+            "RMSE : 0.3486916184092449\n",
+            "MSE : 0.12158584474885846\n",
+            "r2 : 0.3414034277324449\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision1 ------------------------------------\n",
+            "RMSE : 50731.02770663903\n",
+            "r2 : 0.6644683547147878\n",
+            "MSE : 2573637172.1717772\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision2 ------------------------------------\n",
+            "RMSE : 40590.51155035068\n",
+            "r2 : 0.7851995360542353\n",
+            "MSE : 1647589627.9191523\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision3 ------------------------------------\n",
+            "RMSE : 39193.09883425922\n",
+            "r2 : 0.7997348541978984\n",
+            "MSE : 1536098996.2320113\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision4 ------------------------------------\n",
+            "RMSE : 39610.93463269196\n",
+            "r2 : 0.7954420581219594\n",
+            "MSE : 1569026142.4753954\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Decision5 ------------------------------------\n",
+            "RMSE : 38283.681762644075\n",
+            "MSE : 1465640289.3034067\n",
+            "r2 : 0.8089207356096412\n",
+            "\n",
+            "\n",
+            "-------------------- Tree Random Forest6 ------------------------------------\n",
+            "RMSE : 31612.302645342428\n",
+            "MSE : 999337678.5407238\n",
+            "r2 : 0.8697137968390001\n",
+            "\n",
+            "\n",
+            "-------------------- Naive Bayes ------------------------------------\n",
+            "RMSE : 71909.90281765889\n",
+            "\n",
+            "\n",
+            "-------------------- Naive Bayes2 ------------------------------------\n",
+            "RMSE : 0.3969058409438471\n",
+            "r2 : 0.36604296022822613\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "for model, data in RMSE_dictModels.items():\n",
+        "    print(f\"-------------------- {model} ------------------------------------\")\n",
+        "    for metric, value in data.items():\n",
+        "        print(metric, ':', value)\n",
+        "    print(\"\\n\")\n"
       ]
     }
   ],
